@@ -1,10 +1,10 @@
 package com.github.mohamedennahdi.objectmorph.renderer.helper;
 
 import java.io.IOException;
-import java.net.URISyntaxException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+
+import org.apache.commons.io.IOUtils;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -14,9 +14,9 @@ public class RendererHelper {
 	private RendererHelper() {}
 
 	public static String readResource(String properties, Class<?> clazz) {
-		try {
-			return Files.readString(Paths.get(clazz.getResource(properties).toURI()), StandardCharsets.UTF_8);
-		} catch (IOException | URISyntaxException e) {
+		try (InputStream input = clazz.getResourceAsStream(properties)) {
+		    return IOUtils.toString(input, StandardCharsets.UTF_8);
+		} catch (IOException e) {
 			log.error("", e);
 		}
 		return "";
